test/fail/error_cyclic/error_cyclic.sest
require ErrorCyclicFoo
require ErrorCyclicBar

module ErrorCyclic = struct
  let main() =
    {ErrorCyclicFoo.main(), ErrorCyclicBar.main()}
end
